# Phase-Transition-Hardness

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  FILE_STRUCTURE.md  LICENSE  MANIFEST.in  Makefile  README.md  SECURITY.md  environment.yml  pyproject.toml  reproduce.sh  requirements-dev.txt  requirements.txt  setup.cfg
.github/workflows/: experiment-tracker.yml  lint-and-format.yml  reproduce.yml  run-tests.yml  validate-figures.yml  validate-notebooks.yml
ablation/: 01_finite_n_correction.py  02_off_critical_hardness.py  03_k_variation.py  04_solver_comparison.py  05_censoring_sensitivity.py  06_bp_convergence_threshold.py  07_sample_size_sensitivity.py  08_complexity_functional_correction.py
config/: experiment_config.yaml  validation_config.yaml
containers/: singularity.def
data/: .gitignore  barrier_function_table4.json  fss_result_table3.json  hardness_peak_table2.json  phase_constants_table1.json  security_parameters_table6.json  synthetic_alpha_sweep.npz
docs/: API.md  APPENDIX_MAPPING.md  ARCHITECTURE.md  INSTALLATION.md  LIMITATIONS.md  MATHEMATICAL_PROOFS.md  REPRODUCIBILITY.md  REPRODUCIBILITY_ARCHITECTURE.md  REPRODUCIBILITY_CHECKLIST.md  SYMBOL_LIST.md  TROUBLESHOOTING.md
experiments/: alpha_sweep.py  finite_size_scaling.py  hardness_peak.py  scaling_law_verification.py
figures/: extended_data_figures.py  generate_all_figures.py  hardness_plots.py  landscape_visuals.py  phase_transition_plots.py  scaling_collapse.py
notebooks/: 01_introduction.ipynb  01_introduction_and_setup.ipynb  02_alpha_sweep.ipynb  02_instance_generation.ipynb  03_finite_size_scaling.ipynb  03_phase_transition_psat.ipynb  04_hardness_peak.ipynb  05_finite_size_scaling.ipynb  06_critical_exponent_nu.ipynb  07_barrier_hardness_correspondence.ipynb  08_self_averaging.ipynb  09_cross_solver_validation.ipynb  10_bp_equations.ipynb  11_survey_propagation.ipynb  12_cryptographic_owf.ipynb  13_proof_of_work.ipynb  14_intensive_barrier_function.ipynb  15_fss_conjecture_validation.ipynb  16_self_averaging_verification.ipynb  17_cryptographic_security_analysis.ipynb  18_complete_pipeline_reproduction.ipynb
results/tables/: table1_phase_constants.csv  table2_hardness_peak.csv  table3_nu_estimators.csv  table4_barrier_function.csv  table5_self_averaging.csv  table6_security_parameters.csv
scripts/: generate_figures.sh  generate_tables.py  quick_test.sh  reproduce_all_figures.sh  run_ablations.sh  run_full_experiment.sh  setup_dev.sh
src/: __init__.py  barrier_analysis.py  energy_model.py  hardness_metrics.py  instance_generator.py  phase_transition.py  rigidity_analysis.py  runtime_measurement.py  scaling_analysis.py  statistics.py  utils.py  validation.py  whitening_core.py
src/binder_cumulant/: __init__.py  binder_analysis.py  critical_exponent.py
src/cryptography/: __init__.py  one_way_function.py  prg_construction.py  proof_of_work.py  security_parameters.py
src/data_management/: __init__.py  database.py  export.py  import_.py
src/proofs/: __init__.py  barrier_bounds.py  complexity_functional.py  fss_derivation.py  runtime_bounds.py
src/solver_wrappers/: __init__.py  cadical_wrapper.py  kissat_wrapper.py
src/survey_propagation/: __init__.py  bp_equations.py  sp_equations.py  warning_propagation.py
tests/: __init__.py
tests/ablation/: __init__.py  test_ablation.py  test_ablation_scripts.py
tests/integration/: test_end_to_end.py  test_experiments.py  test_figures.py
tests/robustness/: __init__.py  test_robustness.py
tests/scaling/: __init__.py  test_scaling.py
tests/unit/: __init__.py  test_barrier_analysis.py  test_binder_cumulant.py  test_cryptography.py  test_data_management.py  test_energy_model.py  test_hardness_metrics.py  test_instance_generator.py  test_phase_transition.py  test_proofs.py  test_rigidity_analysis.py  test_runtime_measurement.py  test_scaling_analysis.py  test_solver_wrappers.py  test_statistics.py  test_survey_propagation.py  test_utils.py  test_validation.py  test_whitening_core.py
tests/validation/: __init__.py  test_manuscript_claims.py  test_validation.py
