[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phase-transition-hardness"
version = "1.0.0"
description = "Formalizing the link between statistical physics and computational complexity to establish a structural foundation for cryptographic hardness"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Anonymous"},
]
maintainers = [
    {name = "Anonymous"},
]
keywords = [
    "phase-transition",
    "computational-complexity",
    "cryptographic-hardness",
    "constraint-satisfaction",
    "statistical-mechanics",
    "spin-glasses",
    "satisfiability",
    "SAT-solvers",
    "finite-size-scaling"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "matplotlib>=3.7.0",
    "networkx>=3.1.0",
    "tqdm>=4.65.0",
    "joblib>=1.3.0",
    "pandas>=2.0.0",
    "seaborn>=0.12.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-timeout>=2.1.0",
    "pytest-xdist>=3.3.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "ruff>=0.0.280",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
]
notebooks = [
    "jupyter>=1.0.0",
    "ipython>=8.14.0",
    "nbconvert>=7.7.0",
    "nbformat>=5.9.0",
]
all = [
    "phase-transition-hardness[dev,docs,notebooks]"
]

[project.urls]
Homepage = "https://anonymous.4open.science/r/Phase-Transition-Hardness-C795"
Documentation = "https://anonymous.4open.science/r/Phase-Transition-Hardness-C795"
Repository = "https://anonymous.4open.science/r/Phase-Transition-Hardness-C795"
Issues = "https://anonymous.4open.science/r/Phase-Transition-Hardness-C795"
Changelog = "https://anonymous.4open.science/r/Phase-Transition-Hardness-C795/blob/main/CHANGELOG.md"

[project.scripts]
phase-transition-sweep = "experiments.alpha_sweep:main"
phase-transition-peak = "experiments.hardness_peak:main"
phase-transition-fss = "experiments.finite_size_scaling:main"
phase-transition-validate = "src.validation:run_all_checks"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "experiments*"]
exclude = ["tests*", "docs*", "notebooks*", "scripts*"]

[tool.setuptools.package-data]
src = ["py.typed"]

[tool.black]
line-length = 100
target-version = ["py311"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | notebooks
)/
'''

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip = [".git", "__pycache__", "build", "dist", ".venv", "notebooks"]

[tool.ruff]
target-version = "py311"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # Line too long (handled by black)
    "B008",  # Do not perform function calls in argument defaults
]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "notebooks",
]

[tool.ruff.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
exclude = [
    "tests/",
    "notebooks/",
    "docs/",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "src/__init__.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"
