[metadata]
name             = phase-transition-hardness
version          = 1.0.0
description      = Phase-transition structure as foundation for cryptographic hardness
long_description = file: README.md
long_description_content_type = text/markdown
license          = MIT
url              = https://anonymous.4open.science/r/Phase-Transition-Hardness-C795
classifiers      =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Physics
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Security :: Cryptography
keywords         =
    phase-transition
    computational-complexity
    cryptographic-hardness
    random-satisfiability
    statistical-mechanics
    finite-size-scaling
    belief-propagation
    survey-propagation

[options]
packages         = find:
python_requires  = >=3.10
install_requires =
    numpy>=1.24
    scipy>=1.11
    matplotlib>=3.7
    networkx>=3.1
    joblib>=1.3
    pandas>=2.0
    seaborn>=0.12

[options.packages.find]
exclude =
    tests*
    notebooks*
    results*
    data*

[options.extras_require]
dev =
    pytest>=7.4
    pytest-cov>=4.1
    black>=23.7
    ruff>=0.0.280
    isort>=5.12
    mypy>=1.5
    pre-commit>=3.3
    jupyter>=1.0
    nbconvert>=7.7

[tool:pytest]
testpaths        = tests
python_files     = test_*.py
python_classes   = Test*
python_functions = test_*
addopts          = -v --tb=short
filterwarnings   =
    ignore::DeprecationWarning
    ignore::PendingDeprecationWarning

[flake8]
max-line-length  = 100
extend-ignore    = E203, E501, W503
exclude          =
    .git,
    __pycache__,
    notebooks,
    results,
    data
